# runcirrus

./: README.md  pyproject.toml
.github/workflows/: python.yml
src/deploy/scripts/: runcirrus.py
src/runcirrus/: logger.py  runcirrus.py
tests/: test_runcirrus.py
